Resolving Issues #1063 and #2435
* Issue encountered in modern theme "last device" is not visible in tree view in graphs
* Tree column is narrower and narrower on each click
* Plus a few additional minor visual issues

--- a/include/themes/dark/default/style.css
+++ b/include/themes/dark/default/style.css
@@ -433,10 +433,10 @@
   background: transparent;
 }
 .jstree-default > .jstree-no-dots .jstree-open > .jstree-ocl {
-  background-position: -36px -4px;
+  background-position: -36px -5px;
 }
 .jstree-default > .jstree-no-dots .jstree-closed > .jstree-ocl {
-  background-position: -4px -4px;
+  background-position: -4px -5px;
 }
 .jstree-default .jstree-disabled {
   background: transparent;
