--- a/include/themes/dark/main.css
+++ b/include/themes/dark/main.css
@@ -288,12 +288,13 @@ label {
 }
 
 .graphDrillDown {
-	vertical-align: top;
-	align-self: left;
-	z-index: 4;
-	padding: 3px;
-	height: 100%;
-	width: 20px;
+    vertical-align: top;
+    align-self: left;
+    z-index: 4;
+    padding: 3px;
+    height: 100%;
+    width: 22px;
+    min-width: 22px;
 }
 
 .iconWrapper {
@@ -316,7 +317,7 @@ label {
 
 .itemlist {
 	max-height:200px;
-	overflow-y:auto;
+	overflow-y: auto;
 }
 
 .realms {
@@ -480,6 +481,7 @@ label {
 	border-top: 1px solid #161616;
 	display:block;
 	height:14px;
+	padding: 4px;
 }
 
 .menuoptions li a:hover {
@@ -804,8 +806,8 @@ ul#breadcrumbs {
 .cactiTreeNavigationArea {
 	background: #161616;
 	border-right: #aaaaaa 1px solid;
-	padding-left: 5px;
-	padding-right: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
 	padding-top: 10px;
 	display: none;
 	vertical-align: top;
@@ -814,12 +816,24 @@ ul#breadcrumbs {
 	top: 56px;
 	z-index: 2;
 	overflow-x: hidden;
-	overflow-y: hidden;
+	overflow-y: auto;
+}
+
+.cactiTreeNavigationArea a {
+	padding-right: 18px !important;
+}
+
+.cactiTreeNavigationArea li {
+	padding-bottom: 3px;
 }
 
 .jstree {
 	position:relative;
 	display:block;
+}
+
+.tableRowGraph td {
+	padding: 3px 0px;
 }
 
 .cactiConsoleNavigationArea {
@@ -1488,7 +1502,7 @@ legend {
 	}
 
 	.menuoptions li a, .submenuoptions li a {
-		padding-right: 25px;
+		padding: 4px 25px 4px 4px;
 	}
 }
 
